--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: "Kathryn Schuler"
-author: "Kathryn Schuler"
-description: "University of Pennsylvania"
-permalink: /:title/
+title: "Meihui"
+author: "Meihui"
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
@@ -15,17 +13,8 @@ show_sidebar: false        # show a sidebar instead of the usual header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md"}
-  - {url: "/katie.pdf", title: CV}
-  - {url: "http://childlanglab.com", title: Lab}
+  - {file: "XML.md"}
   - {file: "blog.md"}
-
-
-external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:kathryn.schuler@gmail.com"}
-  - {title: Github, icon: github, url: "https://github.com/kschuler"}
-  - {title: Twitter, icon: twitter, url: "https://twitter.com/KathrynSchuler"}
-
 
 remote_theme: niklasbuschmann/contrast@v2.11
 
